--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <header class="l_header">
-    <div class="container p-0">
+    <div class="container p-0 bgg">
         <nav class="navbar navbar-expand-lg p-0">
             <a class="navbar-brand" href="#">
                 <img src="./images/logo.png" alt="">
@@ -47,8 +47,6 @@
                 </ul>
             </div>
         </nav>
-    </div>
-    <div class="container ch-100 p-0">
         <div class="masthead">
             <div class="container ch-100">
                 <div class="row ch-100">
