fix button, add decor, update widget

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
                                 пока вы отдыхаете</h1>
-                            <p class="mb-5 sub_text">Удобное и эфективное планирование для вашего Instagram аккаунта</p>
+                            <p class="mb-6 sub_text">Удобное и эфективное планирование для вашего Instagram аккаунта</p>
                             <div>
-                                <button class="btn btn-custom btn-header--try" type="button">Попробовать бесплатно
-                                </button>
+                                <a href="#" class="btn btn-custom btn-header--try">Попробовать бесплатно
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -72,8 +72,8 @@
     <section class="l_capability">
         <div class="container p-0">
             <div class="row">
-                <div class="col-12">
-                    <h1 class="l_header--h1">Planarix</h1>
+                <div class="col-12 text-center">
+                    <h1 class="l_header--h1 l_ud">Planarix</h1>
                     <h2 class="l_header--h2">Все чего не хватало твоему аккаунту</h2>
                 </div>
             </div>
@@ -132,7 +132,7 @@
     <section class="l_tariff">
         <div class="container p-0">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 text-center">
                     <h1 class="l_header--h1">Наши Тарифы</h1>
                 </div>
             </div>
@@ -332,7 +332,7 @@
         <div class="container p-0">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h1 class="l_header--h1">Решай сам что ты хочешь видеть в проекте</h1>
+                    <h1 class="l_header--h1 l_ud w-26--after">Решай сам что ты хочешь видеть в проекте</h1>
                     <h2 class="l_header--h2">Голосуй за новые фичи</h2>
                     <a href="#" class="btn btn-inline-custom btn-custom-lg mt-5">Связаться</a>
                     <div>
@@ -366,7 +366,17 @@
                     </li>
                     <li>
                         <div class="widget-currency">
-
+                            <ul class="gl-list">
+                                <li>
+                                    <a href="#">rub</a>
+                                </li><li>
+                                    <a href="#">usd</a>
+                                </li><li>
+                                    <a href="#">uah</a>
+                                </li><li>
+                                    <a href="#">eur</a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
