--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
 <body>
 
 <header class="l_header">
-    <div class="container p-0 bgg">
-        <nav class="navbar navbar-expand-lg p-0">
+    <div class="container p-0 bgg pt-5">
+        <nav class="navbar navbar-expand-lg p-0 l_header--navbar">
             <a class="navbar-brand" href="#">
                 <img src="./images/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false">
+                        <title>Menu</title>
+                        <path stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path>
+                    </svg>
+                </span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -78,33 +83,33 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <div class="l_cap--card">
                         <span class="l_cap--number">1</span>
 
                         <p class="l_cap--desc">Все чего не хватало твоему аккаунту</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <div class="l_cap--card">
                         <span class="l_cap--number">2</span>
                         <p class="l_cap--desc">Все чего не хватало твоему аккаунту</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <div class="l_cap--card">
                         <span class="l_cap--number">3</span>
                         <p class="l_cap--desc">удобная панель управления
                             несколькими Instagram аккаунтами</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <div class="l_cap--card">
                         <span class="l_cap--number">4</span>
                         <p class="l_cap--desc">Все чего не хватало твоему аккаунту</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <div class="l_cap--card">
                         <span class="l_cap--number">5</span>
                         <p class="l_cap--desc">Все чего не хватало твоему аккаунту
@@ -112,7 +117,7 @@
                             Все чего не хватало твоему аккаунту</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <div class="l_cap--card">
                         <span class="l_cap--number">6</span>
                         <p class="l_cap--desc">удобная панель управления
@@ -138,7 +143,7 @@
             </div>
             <div class="l_tariff--content m-3">
                 <div class="row">
-                    <div class="col-12 col-md-3 p-0">
+                    <div class="col-12 col-sm-6 col-lg-3 p-0">
                         <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title l_tar-title--free">Free</h3>
@@ -182,7 +187,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 p-0">
+                    <div class="col-12 col-sm-6 col-lg-3 p-0">
                         <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Free</h3>
@@ -226,7 +231,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 p-0">
+                    <div class="col-12 col-sm-6 col-lg-3 p-0">
                         <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Free</h3>
@@ -270,7 +275,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-3 p-0">
+                    <div class="col-12 col-sm-6 col-lg-3 p-0">
                         <div class="card l_card--premium">
                             <div class="card-body">
                                 <h3 class="card-title">Premium</h3>
@@ -344,16 +349,16 @@
     </section>
 </main>
 <!-- /main -->
-<footer class="l_footer">
+<footer class="l_footer text-center text-lg-left">
     <div class="container p-0">
         <div class="row">
-            <div class="col-12 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
                 <h2 class="l_footer--logo">
                     Planarix
                 </h2>
                 <span>© 2018 Planarix</span>
             </div>
-            <div class="col-12 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
                 <h3 class="l_footer--title">
                     Planarix
                 </h3>
@@ -381,7 +386,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-12 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
                 <h3 class="l_footer--title">
                     Информация
                 </h3>
@@ -400,7 +405,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-12 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
                 <h3 class="l_footer--title">
                     Сообщество
                 </h3>
