--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
     <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Rubik:400,500" rel="stylesheet">
@@ -16,9 +16,9 @@
 <body>
 
 <header class="l_header">
-    <div class="container p-0 bgg pt-5">
-        <nav class="navbar navbar-expand-lg p-0 l_header--navbar">
-            <a class="navbar-brand" href="#">
+    <div class="container p-sm-0 bgg">
+        <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
+            <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
                 <img src="./images/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -55,7 +55,7 @@
         <div class="masthead">
             <div class="container ch-100">
                 <div class="row ch-100">
-                    <div class="col-12 mt-200x p-0">
+                    <div class="col-12 mt-200x mt-md-50p p-sm-0">
                         <div class="masthead-content py-5 py-md-0">
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
@@ -75,7 +75,7 @@
 <!-- /header -->
 <main>
     <section class="l_capability">
-        <div class="container p-0">
+        <div class="container p-sm-0">
             <div class="row">
                 <div class="col-12 text-center">
                     <h1 class="l_header--h1 l_ud">Planarix</h1>
@@ -135,7 +135,7 @@
         </div>
     </section>
     <section class="l_tariff">
-        <div class="container p-0">
+        <div class="container p-sm-0">
             <div class="row">
                 <div class="col-12 text-center">
                     <h1 class="l_header--h1">Наши Тарифы</h1>
@@ -334,12 +334,12 @@
         </div>
     </section>
     <section class="l_feedback">
-        <div class="container p-0">
+        <div class="container p-sm-0">
             <div class="row">
                 <div class="col-12 text-center">
                     <h1 class="l_header--h1 l_ud w-26--after">Решай сам что ты хочешь видеть в проекте</h1>
                     <h2 class="l_header--h2">Голосуй за новые фичи</h2>
-                    <a href="#" class="btn btn-inline-custom btn-custom-lg mt-5">Связаться</a>
+                    <a href="#" class="btn btn-inline-custom2 btn-custom-lg mt-5">Связаться</a>
                     <div>
                         <p class="l_feedback--msg">Сейчас в разработке: партнерская программа</p>
                     </div>
@@ -350,7 +350,7 @@
 </main>
 <!-- /main -->
 <footer class="l_footer text-center text-lg-left">
-    <div class="container p-0">
+    <div class="container p-sm-0">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-3 col-xl-3">
                 <h2 class="l_footer--logo">
