--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container ch-100">
                 <div class="row ch-100">
                     <div class="col-12 mt-200x mt-md-50p p-sm-0">
-                        <div class="masthead-content py-5 py-md-0">
+                        <div class="masthead-content py-5 py-md-0  ml-3">
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
                                 пока вы отдыхаете</h1>
@@ -144,7 +144,7 @@
             <div class="l_tariff--content m-3">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3 p-0">
-                        <div class="card">
+                        <div class="card l_card--free">
                             <div class="card-body">
                                 <h3 class="card-title l_tar-title--free">Free</h3>
                                 <ul class="card-list l_tar-list--free">
@@ -339,7 +339,7 @@
                 <div class="col-12 text-center">
                     <h1 class="l_header--h1 l_ud w-26--after">Решай сам что ты хочешь видеть в проекте</h1>
                     <h2 class="l_header--h2">Голосуй за новые фичи</h2>
-                    <a href="#" class="btn btn-inline-custom2 btn-custom-lg mt-5">Связаться</a>
+                    <a href="#" class="btn btn-inline-custom2 btn-custom-lg mt-5">Проголосовать</a>
                     <div>
                         <p class="l_feedback--msg">Сейчас в разработке: партнерская программа</p>
                     </div>
