--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<header class="l_header">
+<header class="l_header d-lg-flex align-items-lg-center">
     <div class="container p-sm-0 bgg">
         <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
             <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
@@ -26,13 +26,13 @@
                 <span class="navbar-toggler-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false">
                         <title>Menu</title>
-                        <path stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path>
+                        <path stroke="#666" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path>
                     </svg>
                 </span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto l_header--menu">
+                <ul class="navbar-nav mr-auto l_header--menu text-center">
                     <li class="nav-item l_lang">
                         <a class="nav-link l_current_lang--ru" href="#">РУС</a><a class="nav-link l_current_lang--en"
                                                                                   href="#">ENG</a>
@@ -55,8 +55,8 @@
         <div class="masthead">
             <div class="container ch-100">
                 <div class="row ch-100">
-                    <div class="col-12 mt-200x mt-md-50p p-sm-0">
-                        <div class="masthead-content py-5 py-md-0  ml-3">
+                    <div class="col-12 mt-md-200x p-lg-0">
+                        <div class="masthead-content text-center text-lg-left py-5 py-md-0  ml-3">
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
                                 пока вы отдыхаете</h1>
