--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
                 <img src="./images/logo.png" alt="">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            <button class="l-navbar--toggler" type="button"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false">
@@ -30,8 +30,7 @@
                     </svg>
                 </span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto l_header--menu text-center">
                     <li class="nav-item l_lang">
                         <a class="nav-link l_current_lang--ru" href="#">РУС</a><a class="nav-link l_current_lang--en"
@@ -56,7 +55,7 @@
             <div class="container ch-100">
                 <div class="row ch-100">
                     <div class="col-12 mt-md-200x p-lg-0">
-                        <div class="masthead-content text-center text-lg-left py-5 py-md-0  ml-3">
+                        <div class="masthead-content text-center text-lg-left pt-md-0  ml-3">
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
                                 пока вы отдыхаете</h1>
