--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
     <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Rubik:400,500" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Rubik:400,500,700" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/app.css">
 
@@ -17,6 +16,7 @@
 
 <header class="l_header d-lg-flex align-items-lg-center">
     <div class="container p-sm-0 bgg">
+        <div class="bgg2"></div>
         <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
             <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
                 <img src="./images/logo.png" alt="">
