--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
                                 пока вы отдыхаете</h1>
-                            <p class="mb-6 sub_text">Удобное и эфективное планирование для вашего Instagram аккаунта</p>
+                            <p class="mb-4 mb-sm-6 sub_text">Удобное и эфективное планирование для вашего Instagram аккаунта</p>
                             <div>
                                 <a href="#" class="btn btn-custom btn-header--try">Попробовать бесплатно
                                 </a>
