--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
         </div>
     </section>
     <section class="l_feedback">
+        <div class="l_feedback--bgg"></div>
         <div class="container p-sm-0">
             <div class="row">
                 <div class="col-12 text-center">
