--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
                                 пока вы отдыхаете</h1>
-                            <p class="mb-4 mb-sm-6 sub_text">Удобное и эфективное планирование для вашего Instagram аккаунта</p>
+                            <p class="mb-4 mb-sm-5 mb-ll-6 sub_text">Удобное и эфективное планирование для вашего Instagram аккаунта</p>
                             <div>
                                 <a href="#" class="btn btn-custom btn-header--try">Попробовать бесплатно
                                 </a>
@@ -151,10 +151,7 @@
                                         Отложенный постинг фото
                                     </li>
                                     <li class="inactive">
-                                        Отложенный постинг альбомов
-                                    </li>
-                                    <li>
-                                        и видео
+                                        Отложенный постинг альбомов и видео
                                     </li>
                                     <li>
                                         Количество аккаунтов: 1
@@ -195,10 +192,7 @@
                                         Отложенный постинг фото
                                     </li>
                                     <li class="inactive">
-                                        Отложенный постинг альбомов
-                                    </li>
-                                    <li>
-                                        и видео
+                                        Отложенный постинг альбомов  и видео
                                     </li>
                                     <li>
                                         Количество аккаунтов: 1
@@ -239,10 +233,7 @@
                                         Отложенный постинг фото
                                     </li>
                                     <li class="inactive">
-                                        Отложенный постинг альбомов
-                                    </li>
-                                    <li>
-                                        и видео
+                                        Отложенный постинг альбомов и видео
                                     </li>
                                     <li>
                                         Количество аккаунтов: 1
@@ -283,10 +274,7 @@
                                         Отложенный постинг фото
                                     </li>
                                     <li>
-                                        Отложенный постинг альбомов
-                                    </li>
-                                    <li>
-                                        и видео
+                                        Отложенный постинг альбомов и видео
                                     </li>
                                     <li>
                                         Количество аккаунтов: 1
