--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="container ch-100">
                 <div class="row ch-100">
                     <div class="col-12 mt-md-200x p-lg-0">
-                        <div class="masthead-content text-center text-lg-left pt-md-0  ml-3">
+                        <div class="masthead-content text-center text-sm-left pt-md-0  ml-3">
                             <h1 class="mb-4">Ваш <span class="bold">Instagram<br/>
                                 работает</span><br/>
                                 пока вы отдыхаете</h1>
