--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Rubik:400,500,700" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/spa-app.css">
+    <link rel="stylesheet" href="./css/app.css">
 
     <title>Hello, world!</title>
 </head>
