--- a/dashboard.html
+++ b/dashboard.html
@@ -65,6 +65,8 @@
         <div class="row">
             <div class="col-xl-4 sidenav d-flex justify-content-center p-0">
                 <aside class="l_site-sidebar w-100">
+                    <div class="l_user-menu--toggle">
+                    </div>
                     <div class="row w-100 m-0 bb-1s pb-5 mb-4">
                         <div class="col-12">
                             <div class="l_user-info text-center">
