--- a/dashboard.html
+++ b/dashboard.html
@@ -34,25 +34,31 @@
                 </span>
             </button>
             <div class="collapse navbar-collapse">
-                <ul class="navbar-nav l_header--menu text-center ml-auto mr-2">
+                <ul class="navbar-nav l_header--menu text-center ml-auto mr-lg-2 d-flex align-items-center">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Faq</a>
                     </li>
-                </ul>
-                <span class="l_tariff-range mr-3">Осталось: 100 дней</span>
-                <a href="#" class="l_tariff-button mr-3">Basic</a>
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            darkdrim@ukr.net
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
+                    <li class="nav-item">
+                        <span class="l_tariff-range mr-3">Осталось: 100 дней</span>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="l_tariff-button mr-3">Basic</a>
+                    </li>
+                    <li class="nav-item">
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    darkdrim@ukr.net
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -280,12 +286,12 @@
             <div class="col-12 col-xl-8">
                 <div class="l_site-content">
                     <div class="row align-items-baseline">
-                        <div class="col-6">
+                        <div class="col-12 col-sm-6 d-flex justify-content-center mb-4">
                             <div class="l_template-desc">
                                 <a href="#">Шаблоны описаний</a>
                             </div>
                         </div>
-                        <div class="col-6 d-flex align-items-end flex-column">
+                        <div class="col-12 col-sm-6 d-flex align-items-sm-end flex-column justify-content-center text-center">
                             <div class="l_create-pub">
                                 <a href="#" class="btn btn-inline-custom3">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus"
