--- a/dashboard.html
+++ b/dashboard.html
@@ -407,10 +407,21 @@
 <!-- /footer -->
 <!-- Main JavaScript -->
 <script src="./js/app.js"></script>
+<script src="https://code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
+
+    $(function(){
+        // Bind the swipeleftHandler callback function to the swipe event on div.box
+        $( "body" ).on( "swiperight", swipeleftHandler );
+
+        // Callback function references the event target and adds the 'swipeleft' class to it
+        function swipeleftHandler( event ){
+            $( "body" ).addClass( "r-menu_show" );
+        }
+    });
 
     $('#calendar').fullCalendar({
         header: {
