--- a/registration.html
+++ b/registration.html
@@ -15,129 +15,132 @@
     <title>Hello, world!</title>
 </head>
 <body>
-<main class="l_site-main">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 mt-5 mb-5">
-                <h1 class="text-center mb-4 l_reg-title">Регистрация</h1>
-                <div class="l_registration d-flex justify-content-center">
-                    <div class="l_reg-container">
-                        <form>
-                            <div class="form-group mb-4">
-                                <input type="email" class="form-control custom-field"
-                                       placeholder="Email">
-                            </div>
-                            <div class="form-group mb-4">
-                                <input type="password" class="form-control custom-field"
-                                       placeholder="Password">
-                            </div>
-                            <button type="submit" class="btn btn-inline-custom text-medium w-100 p-3 rounded-medium mb-3">Зарегистрироваться</button>
-                            <div class="form-group text-center">
-                                <p class="l_reg-user-accept">Регистрируясь, пользователь принимает <a href="#"> Пользовательское
-                                    соглашение</a>
-                                </p>
-                                <p class="l_reg-user-quest">Уже зарегистрированы? <a href="#">Войти</a>
-                                </p>
-                            </div>
-                        </form>
+<div class="wrapper">
+    <main class="l_site-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 mt-lg-5 mb-5">
+                    <h1 class="text-center mb-4 l_reg-title">Регистрация</h1>
+                    <div class="l_registration d-flex justify-content-center">
+                        <div class="l_reg-container">
+                            <form>
+                                <div class="form-group mb-4">
+                                    <input type="email" class="form-control custom-field"
+                                           placeholder="Email">
+                                </div>
+                                <div class="form-group mb-4">
+                                    <input type="password" class="form-control custom-field"
+                                           placeholder="Password">
+                                </div>
+                                <button type="submit" class="btn btn-inline-custom text-medium w-100 p-3 rounded-medium mb-3">Зарегистрироваться</button>
+                                <div class="form-group text-center">
+                                    <p class="l_reg-user-accept">Регистрируясь, пользователь принимает <a href="#"> Пользовательское
+                                        соглашение</a>
+                                    </p>
+                                    <p class="l_reg-user-quest">Уже зарегистрированы? <a href="#">Войти</a>
+                                    </p>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
-<!-- /main -->
-<footer class="l_footer text-center text-lg-left">
-    <div class="container p-sm-0">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
-                <h2 class="l_footer--logo">
-                    Planarix
-                </h2>
-                <ul>
-                    <li>
-                        <span>© 2018 Planarix</span>
-                    </li>
-                    <li>
-                        <div class="widget-lang">
-                            <ul class="gl-list">
-                                <li>
-                                    <a class="lang-ru" href="#">рус</a>
-                                </li>
-                                <li>
-                                    <a class="lang-en" href="#">eng</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
-                <h3 class="l_footer--title">
-                    Planarix
-                </h3>
-                <ul>
-                    <li>
-                        <a href="#">О Нас</a>
-                    </li>
-                    <li>
-                        <a href="#">Партнерская программа</a>
-                    </li>
-                    <li>
-                        <div class="widget-currency">
-                            <ul class="gl-list">
-                                <li>
-                                    <a href="#">rub</a>
-                                </li>
-                                <li>
-                                    <a href="#">usd</a>
-                                </li>
-                                <li>
-                                    <a href="#">uah</a>
-                                </li>
-                                <li>
-                                    <a href="#">eur</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
-                <h3 class="l_footer--title">
-                    Информация
-                </h3>
-                <ul>
-                    <li>
-                        <a href="#">Пользовательское соглашение</a>
-                    </li>
-                    <li>
-                        <a href="#">Политика конфидециальности</a>
-                    </li>
-                    <li>
-                        <a href="#">Безопасность аккаунтов</a>
-                    </li>
-                    <li>
-                        <a href="#">Помощь и FAQ</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
-                <h3 class="l_footer--title">
-                    Сообщество
-                </h3>
-                <ul>
-                    <li>
-                        <a href="#"><i class="l_icon l_icon--youtube"></i></a>
-                        <a href="#"><i class="l_icon l_icon--telegram"></i></a>
-                    </li>
-                </ul>
-            </div>
+    </main>
+    <!-- /main -->
+    <footer class="l_footer text-center text-lg-left footer-container">
+        <div class="container p-0 pt-5">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                    <h2 class="l_footer--logo">
+                        Planarix
+                    </h2>
+                    <ul>
+                        <li>
+                            <span>© 2018 Planarix</span>
+                        </li>
+                        <li>
+                            <div class="widget-lang">
+                                <ul class="gl-list">
+                                    <li>
+                                        <a class="lang-ru" href="#">рус</a>
+                                    </li>
+                                    <li>
+                                        <a class="lang-en" href="#">eng</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                    <h3 class="l_footer--title">
+                        Planarix
+                    </h3>
+                    <ul>
+                        <li>
+                            <a href="#">О Нас</a>
+                        </li>
+                        <li>
+                            <a href="#">Партнерская программа</a>
+                        </li>
+                        <li>
+                            <div class="widget-currency">
+                                <ul class="gl-list">
+                                    <li>
+                                        <a href="#">rub</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">usd</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">uah</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">eur</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                    <h3 class="l_footer--title">
+                        Информация
+                    </h3>
+                    <ul>
+                        <li>
+                            <a href="#">Пользовательское соглашение</a>
+                        </li>
+                        <li>
+                            <a href="#">Политика конфидециальности</a>
+                        </li>
+                        <li>
+                            <a href="#">Безопасность аккаунтов</a>
+                        </li>
+                        <li>
+                            <a href="#">Помощь и FAQ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                    <h3 class="l_footer--title">
+                        Сообщество
+                    </h3>
+                    <ul>
+                        <li>
+                            <a href="#"><i class="l_icon l_icon--youtube"></i></a>
+                            <a href="#"><i class="l_icon l_icon--telegram"></i></a>
+                        </li>
+                    </ul>
+                </div>
 
+            </div>
         </div>
-    </div>
-</footer>
-<!-- /footer -->
+    </footer>
+    <!-- /footer -->
+</div>
+<!-- /wrapper -->
 <!-- Main JavaScript -->
 <script src="./js/app.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
