--- a/dashboard.html
+++ b/dashboard.html
@@ -527,7 +527,7 @@
                     backgroundImage: "url(" + $(this).data('src') + ")"
                 });
             },function () {
-              /*  $('.cal_img-thumb').css({
+                $('.cal_img-thumb').css({
                     top: 0,
                     left: 0,
                     width: 0,
@@ -536,7 +536,7 @@
                     opacity: 0,
                     position: 'absolute',
                     backgroundImage: "none"
-                });*/
+                });
             });
         },
         events: [
