--- a/dashboard.html
+++ b/dashboard.html
@@ -14,8 +14,7 @@
 
     <title>Hello, world!</title>
 </head>
-<body>
-
+<body class="dashboard">
 <header class="l_header">
     <div class="container p-sm-0">
         <nav class="navbar navbar-expand-lg l_header--navbar fixed-md-top">
@@ -358,7 +357,7 @@
     </main>
     <!-- /main -->
     <footer class="l_footer text-center text-lg-left footer-container">
-        <div class="container p-0 pt-5">
+        <div class="container px-sm-0 pt-5">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 col-xl-3">
                     <h2 class="l_footer--logo">
@@ -516,26 +515,16 @@
                 //console.log('delete');
             });
             //Show thumb image
-            element.find(".fc-content img").hover(function () {
+            element.find(".fc-content img[data-src]").hover(function () {
                 $('.cal_img-thumb').css({
                     top: $(this).offset().top - 215,
                     left: $(this).offset().left,
-                    width: '110px',
-                    height: '110px',
-                    visibility: 'visible',
-                    opacity: 1,
-                    position: 'absolute',
+                    display: 'block',
                     backgroundImage: "url(" + $(this).data('src') + ")"
                 });
             },function () {
                 $('.cal_img-thumb').css({
-                    top: 0,
-                    left: 0,
-                    width: 0,
-                    height: 0,
-                    visibility: 'hidden',
-                    opacity: 0,
-                    position: 'absolute',
+                    display: 'none',
                     backgroundImage: "none"
                 });
             });
