--- a/registration.html
+++ b/registration.html
@@ -49,7 +49,7 @@
     </main>
     <!-- /main -->
     <footer class="l_footer text-center text-lg-left footer-container">
-        <div class="container p-0 pt-5">
+        <div class="container px-sm-0 pt-5">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 col-xl-3">
                     <h2 class="l_footer--logo">
