--- a/registration.html
+++ b/registration.html
@@ -14,12 +14,12 @@
 
     <title>Hello, world!</title>
 </head>
-<body>
+<body class="registration">
 <div class="wrapper">
     <main class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-5 mb-5">
+                <div class="col-12 mt-lg-3 mt-xxl-5 mb-lx-5">
                     <h1 class="text-center mb-4 l_reg-title">Регистрация</h1>
                     <div class="l_registration d-flex justify-content-center">
                         <div class="l_reg-container">
@@ -32,7 +32,7 @@
                                     <input type="password" class="form-control custom-field"
                                            placeholder="Password">
                                 </div>
-                                <button type="submit" class="btn btn-inline-custom text-medium w-100 p-3 rounded-medium mb-3">Зарегистрироваться</button>
+                                <button type="submit" class="btn btn-inline-custom text-medium w-100 p-07 p-xxl-3 rounded-medium mb-3">Зарегистрироваться</button>
                                 <div class="form-group text-center">
                                     <p class="l_reg-user-accept">Регистрируясь, пользователь принимает <a href="#"> Пользовательское
                                         соглашение</a>
