--- a/profile.html
+++ b/profile.html
@@ -328,7 +328,7 @@
                     <div class="l_site-content">
                         <div class="l_site-change_email">
                             <div class="row">
-                                <div class="col-12 col-md-10">
+                                <div class="col-12 col-xl-10">
                                    <div class="change_email-container">
                                        <h4 class="change_email-title">Change email</h4>
                                        <form>
@@ -343,7 +343,7 @@
                         </div>
                         <div class="l_site-change_password">
                             <div class="row">
-                                <div class="col-12 col-md-10">
+                                <div class="col-12 col-xl-10">
                                     <div class="change_password-container">
                                         <h4 class="change_password-title">Change password</h4>
                                         <form>
@@ -364,7 +364,7 @@
                         </div>
                         <div class="l_site-current_tariff">
                             <div class="row">
-                                <div class="col-12 col-md-10">
+                                <div class="col-12 col-xl-10">
                                     <div class="current_tariff-container">
                                         <h4 class="current_tariff-title">Current Tariff Plan</h4>
                                         <div class="current_tariff-box text-center">
@@ -379,7 +379,7 @@
                         <div class="l_site-timeline_profile">
                             <h4 class="timeline_profile-title">Timeline profile</h4>
                             <div class="row  perfect-scrollbar2">
-                                <div class="col-12 col-md-8">
+                                <div class="col-12 col-xl-8">
                                     <div class="timeline_profile-container">
                                         <div class="timeline_profile-box">
                                             <ul class="list-group timeline_profile-list">
