--- a/create_publication.html
+++ b/create_publication.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Rubik:400,500,700" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.css" rel="stylesheet">
     <!-- CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fine-uploader@5.16.2/jquery.fine-uploader/fine-uploader-gallery.min.css">
     <link rel="stylesheet" href="./css/app.css">
-
     <title>Hello, world!</title>
 </head>
-<body class="dashboard">
+<body class="profile">
 <header class="l_header">
     <div class="container p-sm-0">
         <nav class="navbar navbar-expand-lg l_header--navbar fixed-md-top">
@@ -324,36 +324,60 @@
                         </div>
                     </aside>
                 </div>
-                <div class="col-12 col-xl-8">
+                <div class="col-12 col-xl-8 pl-4">
                     <div class="l_site-content">
-                        <div class="row align-items-baseline">
-                            <div class="col-12 col-sm-6 d-flex mb-4 justify-content-sm-start justify-content-center">
-                                <div class="l_template-desc">
-                                    <a href="#">Шаблоны описаний</a>
+                        <div class="l_site-content-title">
+                            <h3>Creating a new post</h3>
+                        </div>
+                        <div class="l_site-new_post">
+                            <div class="row">
+                                <div class="col-12 col-xl-10">
+                                    <form action="" method="post" enctype="multipart/form-data">
+                                        <div class="account_select">
+                                            <div class="form-group">
+                                                <label class="account_select-title" for="account_select">Select an
+                                                    account to publish</label>
+                                                <select  class="form-control publish_account custom_select" name="account_select" id="account_select">
+                                                    <option value="calendar" data-image="./images/user_photo.jpg">Calendar</option>
+                                                    <option value="shopping_cart" data-image="./images/user_photo.jpg">Shopping Cart</option>
+                                                    <option value="cd" data-image="./images/user_photo.jpg">CD</option>
+                                                    <option value="email"  selected="selected" title="./images/user_photo.jpg">Email</option>
+                                                    <option value="faq" data-image="./images/user_photo.jpg">FAQ</option>
+                                                    <option value="games" data-image="./images/user_photo.jpg">Games</option>
+                                                    <option value="shopping_cart" data-image="./images/user_photo.jpg">Shopping Cart</option>
+                                                    <option value="cd" data-image="./images/user_photo.jpg">CD</option>
+                                                    <option value="email"  selected="selected" title="./images/user_photo.jpg">Email</option>
+                                                    <option value="faq" data-image="./images/user_photo.jpg">FAQ</option>
+                                                    <option value="games" data-image="./images/user_photo.jpg">Games</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="upload_file">
+                                            <div class="form-group">
+                                                <div id="uploader"></div>
+                                            </div>
+                                        </div>
+                                        <div class="template_select">
+                                            <div class="form-group">
+                                                <label class="template_select-title" for="template_select">Select template</label>
+                                                <select  class="form-control custom_select" name="template_select" id="template_select">
+                                                    <option value="calendar" data-description="Шаблон 1">#sun #summer #girl #like</option>
+                                                    <option value="shopping_cart" data-description="Шаблон Test">#sun #summer #girl #like #sun #summer #girl #like #sun #summer #girl #like</option>
+                                                    <option value="cd" data-description="Шаблон 2">CD</option>
+                                                    <option value="email" data-description="Шаблон 5">Email</option>
+                                                    <option value="faq" data-description="Шаблон 31">FAQ</option>
+                                                </select>
+                                            </div>
+                                            <button type="submit" class="btn btn-inline-custom4">Change</button>
+                                        </div>
+                                    </form>
                                 </div>
-                            </div>
-                            <div class="col-12 col-sm-6 d-flex align-items-sm-end flex-column justify-content-center text-center">
-                                <div class="l_create-pub">
-                                    <a href="#" class="btn btn-inline-custom3">
-                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus"
-                                             role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
-                                             class="svg-inline--fa fa-plus fa-w-14 fa-2x">
-                                            <path fill="currentColor"
-                                                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
-                                                  class=""></path>
-                                        </svg>
-                                        Создать публикацию
-                                    </a>
-                                </div>
-                                <p class="l_total-public">Осталось публикаций 20/150</p>
                             </div>
                         </div>
                     </div>
-                    <div id="calendar"></div>
                 </div>
             </div>
         </div>
-        <div class="cal_img-thumb"></div>
     </main>
     <!-- /main -->
     <footer class="l_footer text-center text-lg-left footer-container">
@@ -449,139 +473,100 @@
     <!-- /footer -->
 </div>
 <!-- /wrapper -->
+<script type="text/template" id="qq-template">
+    <div class="qq-uploader-selector qq-uploader qq-gallery" qq-drop-area-text="Drop files here">
+        <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
+            <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
+        </div>
+        <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
+            <span class="qq-upload-drop-area-text-selector"></span>
+        </div>
+        <div class="qq-upload-button-selector qq-upload-button">
+
+        </div>
+        <span class="qq-drop-processing-selector qq-drop-processing">
+                <span>Processing dropped files...</span>
+                <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
+            </span>
+        <ul class="qq-upload-list-selector qq-upload-list" role="region" aria-live="polite" aria-relevant="additions removals">
+            <li>
+                <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
+                <div class="qq-progress-bar-container-selector qq-progress-bar-container">
+                    <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-progress-bar-selector qq-progress-bar"></div>
+                </div>
+                <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
+                <div class="qq-thumbnail-wrapper">
+                    <img class="qq-thumbnail-selector" qq-max-size="120" qq-server-scale>
+                </div>
+                <button type="button" class="qq-upload-cancel-selector qq-upload-cancel">X</button>
+                <button type="button" class="qq-upload-retry-selector qq-upload-retry">
+                    <span class="qq-btn qq-retry-icon" aria-label="Retry"></span>
+                    Retry
+                </button>
+
+                <div class="qq-file-info">
+                    <div class="qq-file-name">
+                        <span class="qq-upload-file-selector qq-upload-file"></span>
+                        <span class="qq-edit-filename-icon-selector qq-btn qq-edit-filename-icon" aria-label="Edit filename"></span>
+                    </div>
+                    <input class="qq-edit-filename-selector qq-edit-filename" tabindex="0" type="text">
+                    <span class="qq-upload-size-selector qq-upload-size"></span>
+                    <button type="button" class="qq-btn qq-upload-delete-selector qq-upload-delete">
+                        <span class="qq-btn qq-delete-icon" aria-label="Delete"></span>
+                    </button>
+                    <button type="button" class="qq-btn qq-upload-pause-selector qq-upload-pause">
+                        <span class="qq-btn qq-pause-icon" aria-label="Pause"></span>
+                    </button>
+                    <button type="button" class="qq-btn qq-upload-continue-selector qq-upload-continue">
+                        <span class="qq-btn qq-continue-icon" aria-label="Continue"></span>
+                    </button>
+                </div>
+            </li>
+        </ul>
+
+        <dialog class="qq-alert-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">Close</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-confirm-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">No</button>
+                <button type="button" class="qq-ok-button-selector">Yes</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-prompt-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <input type="text">
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">Cancel</button>
+                <button type="button" class="qq-ok-button-selector">Ok</button>
+            </div>
+        </dialog>
+    </div>
+</script>
 <!-- Main JavaScript -->
 <script src="./js/app.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/fine-uploader@5.16.2/jquery.fine-uploader/jquery.fine-uploader.min.js"></script>
 <script>
 
-    //Full Calendar Init
-    $('#calendar').fullCalendar({
-        header: {
-            left: 'title',
-            right: 'prev,next today,month',
-        },
-        defaultDate: '2018-11-16',
-        navLinks: true,
-        eventLimit: true,
-        contentHeight: window.innerWidth > 780 ? 700 : 'auto',
-        editable: false,
-        titleFormat: 'MMMM YYYY',
-        timeFormat: 'H(:mm)',
-        displayEventTime: false,
-        dayClick: function (date, jsEvent, view) {
-            /* console.log('Clicked on: ' + date.format());
-             console.log('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
-             console.log('Current view: ' + view.name);
-             var hoy = moment();
-             console.log(date);
-             if(date.format("YYYY-MM-DD HH:mm") >= hoy.format("YYYY-MM-DD HH:mm")){
-                 asignarCita(date);
-             }else{
-                 swal({
-                     title: "Cita no disponible",
-                     text: "La fecha u hora seleccionada ya ha pasado."
-                 });
-             }*/
-        },
-        eventRender: function (event, element, view) {
-            if (event.image_url) {
-                element.find("div.fc-content").prepend("<img data-src='" + event.image_url + "' src='" + event.image_url + "' width='27' height='27'>");
+    // Some options to pass to the uploader are discussed on the next page
+    var uploader = new qq.FineUploader({
+        element: document.getElementById("uploader")
+    })
+
+        $(document).ready(function(e) {
+            // activate Custom Select
+            try {
+                $("body .custom_select").msDropDown();
+            } catch(e) {
+                alert(e.message);
             }
-            /*if (view.name == 'listDay') {
-                element.find(".fc-list-item-time").append("<span class='closeon'>X</span>");
-            } else {*/
-            element.find(".fc-content").append("<span class='closeon'><img src='./images/cancel.png' style='float: right' width='15' height='15'></span>");
-            /*}*/
-            element.find(".closeon").on('click', function () {
-                $('#calendar').fullCalendar('removeEvents', event._id);
-                //console.log('delete');
-            });
-            //Show thumb image
-            element.find(".fc-content img[data-src]").hover(function () {
-                $('.cal_img-thumb').css({
-                    top: $(this).offset().top - 215,
-                    left: $(this).offset().left,
-                    display: 'block',
-                    backgroundImage: "url(" + $(this).data('src') + ")"
-                });
-            },function () {
-                $('.cal_img-thumb').css({
-                    display: 'none',
-                    backgroundImage: "none"
-                });
-            });
-        },
-        events: [
-            {
-                title: '16.00',
-                start: '2019-02-27',
-                image_url: './images/small_thumb.jpg',
-                end: '2019-02-28'
-            },
-            {
-                title: '16.00',
-                start: '2018-11-20',
-                image_url: './images/small_thumb2.jpg',
-                allDay: true
-            },
-            {
-                title: '16.00',
-                start: '2018-11-20',
-                image_url: './images/small_thumb2.jpg',
-                allDay: true
-            },
-            {
-                title: '16.00',
-                start: '2018-11-14 09:00:00',
-                image_url: './images/small_thumb.jpg',
-                end: '2018-11-14 11:00:00'
-            },
-            {
-                title: '16.00',
-                start: '2018-11-13 09:00:00',
-                image_url: './images/small_thumb.jpg',
-                end: '2018-11-13 11:00:00'
-            },
-            {
-                title: '16.00',
-                start: '2018-11-21 19:00:00',
-                image_url: './images/small_thumb.jpg',
-                end: '2018-11-21 22:00:00'
-            },
-            {
-                title: '15.00',
-                start: '2018-11-21 19:00:00',
-                image_url: './images/small_thumb.jpg',
-                end: '2018-11-21 22:00:00'
-            },
-            {
-                title: '16.00',
-                start: '2018-11-21 19:00:00',
-                image_url: './images/small_thumb2.jpg',
-                end: '2018-11-21 22:00:00'
-            },
-            {
-                title: '16.00',
-                start: '2018-11-21 19:00:00',
-                image_url: './images/small_thumb.jpg',
-                end: '2018-11-21 22:00:00'
-            },
-            {
-                title: '16.00',
-                image_url: './images/small_thumb.jpg',
-                start: '2018-11-21 19:00:00',
-                end: '2018-11-21 22:00:00'
-            },
-            {
-                title: '16.00',
-                image_url: './images/small_thumb.jpg',
-                start: '2018-11-21 19:00:00',
-                end: '2018-11-21 22:00:00'
-            },
-        ]
-    });
+        });
 </script>
 </body>
 </html>
